# ml-ids-analyzer

./: .coverage  .coverage.Alexs-Desktop.16940.XftCnjex  .dockerignore  .gitatributes  .gitattributes  .gitignore  ChatGPT_Summary.txt  DEV_GUIDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  poetry-install.py  pyproject.toml  repo‐tree.txt  requirements.txt  sample_alerts_utf8.csv  setup.cfg  setup.py  src
.github/workflows/: ci.yml
config/: .env.example  config.yaml  default.yaml  entrypoint.sh  prod.yaml
data/: API_DATASET.csv  cicids2017_clean.csv
data/suricata/: alert1.json  alert2.json
docker/: .dockerignore  .env  Dockerfile  Dockerfile.dev  Dockerfile.prod  docker-compose.yml  entrypoint.sh  healthcheck.sh
docs/: 03_demo.ipynb
ml_ids_analyzer/: config.py
ml_ids_analyzer/inference/: predict.py
ml_ids_analyzer/modeling/: evaluate.py  train.py
ml_ids_analyzer/preprocessing/: preprocess.py
notebooks/: 02_baseline_model.ipynb  03_demo.ipynb
outputs/: new_predictions.csv  predictions.csv  scaler.joblib
src/: config.py  evaluate.py  model.py  predict.py  preprocess.py
src/config/: config.yaml
src/ml_ids_analyzer/: __init__.py  cli.py  config.py  dashboard.py  model.py
src/ml_ids_analyzer/api/: __init__.py  app.py  dashboard.py
src/ml_ids_analyzer/cli/: cli.py
src/ml_ids_analyzer/config/: __init__.py
src/ml_ids_analyzer/explainability/: __init__.py  explain.py
src/ml_ids_analyzer/inference/: __init__.py  predict.py
src/ml_ids_analyzer/ingest/: suricata.py
src/ml_ids_analyzer/modeling/: __init__.py  evaluate.py  model.py  train.py
src/ml_ids_analyzer/preprocessing/: __init__.py  preprocess.py  suricata_to_features.py
tests/: test_api.py  test_cli.py  test_cli_predict.py  test_cli_train.py  test_evaluate.py  test_explain.py  test_model.py  test_preprocess.py  test_suricata.py
tests/api/: test_dashboard.py
tests/evaluate/: test_evaluate_model.py  test_tune_threshold.py
tests/inference/: test_predict_alerts.py  test_predict_cli.py
tests/modeling/: test_explain_model.py  test_train_cli.py  test_train_random_forest.py
tests/preprocessing/: test_cli_preprocess.py  test_preprocess.py
