[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ml-ids-analyzer"
version = "0.1.0"
description = "A machine learning pipeline and API for analyzing IDSauthors = ["Alexander Gregory Zimpher <alexanderzimpher@gmail.com>, Spencer Hendren <spencer.hendren@gmail.com>"] alerts using CICIDS2017."
authors = [
  "Alexander Gregory Zimpher <alexanderzimpher@gmail.com>",
  "Spencer Hendren <spencer.hendren@gmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlexZimpher/ml-ids-analyzer"
keywords = ["ml", "ids", "suricata", "security", "alert", "analysis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Tell Poetry where your code lives, so it will install ml_ids_analyzer as a package.
[[tool.poetry.packages]]
include = "ml_ids_analyzer"
from = "src"

[tool.poetry.dependencies]
python       = ">=3.9,<3.11"
pandas       = "^1.5"
numpy        = "^1.26"
scikit-learn = "^1.6"
xgboost      = "^1.7"
joblib       = "^1.5"
PyYAML       = "^6.0"
click        = "^8.1"       # If you use click for any CLI
fastapi      = "^0.85"
uvicorn      = { extras = ["standard"], version = "^0.18" }
pydantic     = "^1.10"
httpx        = "^0.23"
requests     = "^2.32"
anyio        = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest        = "^7.4"
seaborn       = "^0.13"
matplotlib    = "^3.7"
shap          = "^0.41"
python-dotenv = "^1.1"

[tool.poetry.scripts]
# Adjust these paths so that they point to the modules where you define main()
mlids-suricata-features = "ml_ids_analyzer.preprocessing.suricata_to_features:main"
mlids-preprocess = "ml_ids_analyzer.preprocessing.preprocess:main"
mlids-train      = "ml_ids_analyzer.modeling.train:main"
mlids-predict    = "ml_ids_analyzer.inference.predict:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"