[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ml-ids-analyzer"
version = "0.1.0"
description = "A machine learning pipeline and API for analyzing IDS alerts using CICIDS2017."
authors = [
  "Alexander Gregory Zimpher <alexanderzimpher@gmail.com>",
  "Spencer Hendren <spencer.hendren@gmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlexZimpher/ml-ids-analyzer"
keywords = ["ml", "ids", "suricata", "security", "alert", "analysis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[[tool.poetry.packages]]
include = "ml_ids_analyzer"
from = "src"

[tool.poetry.dependencies]
python        = ">=3.11,<3.12"
pandas        = "^2.2.2"
numpy         = "^1.26.4"
scikit-learn  = "^1.4.2"
joblib        = "^1.4.2"
PyYAML        = "^6.0.1"
click         = "^8.1.7"
fastapi       = "^0.111.0"
uvicorn       = { extras = ["standard"], version = "^0.29.0" }
pydantic      = "^2.7.1"
httpx         = "^0.27.0"
requests      = "^2.32.3"
anyio         = "^4.3.0"
shap          = "^0.44.1"
matplotlib    = "^3.8.4"
seaborn       = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest        = "^8.2.1"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
mlids-preprocess = "ml_ids_analyzer.preprocessing.preprocess:main"
mlids-suricata-features = "ml_ids_analyzer.preprocessing.suricata_to_features:main"
mlids-train = "ml_ids_analyzer.modeling.train:main"
mlids-predict = "ml_ids_analyzer.inference.predict:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
