[metadata]
name = ml-ids-analyzer
version = 0.1.0
author = Your Name
description = ML pipeline for IDS alert analysis

[options]
packages = find:
install_requires =
    pandas
    numpy
    scikit-learn
    PyYAML
    joblib
    matplotlib
    seaborn
    click
    fastapi
    uvicorn[standard]
    pydantic
    httpx

[options.entry_points]
console_scripts =
    mlids-preprocess = ml_ids_analyzer.preprocessing.preprocess:main
    mlids-train      = ml_ids_analyzer.model:main
    mlids-predict    = ml_ids_analyzer.inference.predict:main

[flake8]
max-line-length = 88
extend-ignore =
    E203
    W503
    W391
    E501
